// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabPane should render a default component with label 1`] = `
<div
  className="tab is-text-only"
  role="tab"
>
  <span
    className="label"
  >
    Default
  </span>
</div>
`;

exports[`TabPane should render as disabled when indicated 1`] = `
<div
  className="tab is-disabled is-text-only"
  role="tab"
>
  <span
    className="label"
  >
    Label
  </span>
</div>
`;

exports[`TabPane should render with a custom display when provided 1`] = `
<div
  className="tab is-text-only"
  role="tab"
>
  <div>
    Custom Display
  </div>
</div>
`;

exports[`TabPane should render with custom props 1`] = `
<div
  className="tab is-text-only customClass"
  role="tab"
>
  <span
    className="label"
  >
    Default
  </span>
</div>
`;

exports[`TabPane should render with icon and label 1`] = `
<div
  className="tab"
  role="tab"
>
  <div>
    Fake icon
  </div>
  <span
    className="label"
  >
    Label
  </span>
</div>
`;

exports[`TabPane should render with icon only when indicated 1`] = `
<div
  aria-label="Label"
  className="tab is-icon-only"
  role="tab"
>
  <div>
    Fake icon
  </div>
</div>
`;
